--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ crate-type = ["cdylib"]
 default = ["nvim-oxi/neovim-0-10", "nvim-oxi/test", "nvim-oxi/libuv"]
 
 [dependencies]
+enum_dispatch = "0.3.13"
 nvim-oxi = "0.5"
 rand = "0.8.5"
 strum = { version = "0.26", features = ["derive"] }
